Colored output for /cleanup stats per dimension Changed logging to always log to file logs/sidV2/cleanup.log while console logging can be disabled. Changed how eligible are calculated as blacklisted items should not count towards the threshold limit.
Updated README.md